# object-detection-YOLOv11

./: .gitignore  README.md  data.yaml  preprocessing_separate_datasets.ipynb  preprocessing_v11.ipynb  pyproject.toml  training.ipynb  webcam_inference_testing.ipynb
model/: data.yaml
